Add Frontend skeleton and docker-compose environment
Additionally:

1. Added License
2. Updated documentation

Signed-off-by: Nadav Goldin <ngoldin@virtual-gate.net>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,22 @@ services:
     restart: always
     ports:
       - 8081:8081
+  zulu-frontend:
+    image: zulu-frontend
+    restart: always
+    ports:
+      - 8085:80
+    build:
+      context: ./frontend/zulu
+      dockerfile: Dockerfile
+  zulu-backend:
+    image: zulu-backend
+    restart: always
+    ports:
+     - 8086:8342
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    environment:
+      - ENV_FOR_DYNACONF=compose
 
