--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,27 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# Frontend
+
+# dependencies
+*node_modules*
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+### 
+*.swp
+*.code-workspace
+.vscode/*
