--- a/frontend/zulu/package.json
+++ b/frontend/zulu/package.json
@@ -5,7 +5,18 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "0.9.5"
+    "@material-ui/core": "^4.10.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "leaflet": "^1.6.0",
+    "leaflet.markercluster": "^1.4.1",
+    "material-ui": "^0.20.2",
+    "notistack": "^0.9.16",
+    "prop-types": "^15.7.2",
+    "react-leaflet": "1.9.1",
+    "react-leaflet-markercluster": "^1.1.8",
+    "react-scripts": "^3.4.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -13,5 +24,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
