--- a/frontend/zulu/package.json
+++ b/frontend/zulu/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^3.10.0",
     "react-leaflet": "1.9.1",
     "react-leaflet-markercluster": "^1.1.8",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "react-bootstrap": "1.0.1"
   },
   "devDependencies": {},
   "scripts": {
