added basic router

--- a/frontend/zulu/package.json
+++ b/frontend/zulu/package.json
@@ -21,7 +21,9 @@
     "react-scripts": "^3.4.0",
     "react-bootstrap": "1.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "react-router-dom": "^5.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
