--- a/frontend/zulu/package.json
+++ b/frontend/zulu/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,13 +13,13 @@
     "notistack": "^0.9.16",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "1.0.1",
     "react-dom": "^16.13.1",
     "react-floating-action-button": "^1.0.5",
     "react-icons": "^3.10.0",
     "react-leaflet": "1.9.1",
     "react-leaflet-markercluster": "^1.1.8",
-    "react-scripts": "^3.4.0",
-    "react-bootstrap": "1.0.1"
+    "react-scripts": "^3.4.0"
   },
   "devDependencies": {},
   "scripts": {
