--- a/frontend/zulu/package.json
+++ b/frontend/zulu/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "@material-ui/core": "^4.10.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "install": "^0.13.0",
     "leaflet": "^1.6.0",
     "leaflet.markercluster": "^1.4.1",
     "material-ui": "^0.20.2",
     "notistack": "^0.9.16",
+    "npm": "^6.14.5",
     "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
     "react-leaflet": "1.9.1",
     "react-leaflet-markercluster": "^1.1.8",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0"
   },
   "devDependencies": {},
