--- a/frontend/zulu/package.json
+++ b/frontend/zulu/package.json
@@ -13,13 +13,15 @@
     "notistack": "^0.9.16",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "1.0.1",
     "react-dom": "^16.13.1",
     "react-floating-action-button": "^1.0.5",
     "react-icons": "^3.10.0",
     "react-leaflet": "1.9.1",
     "react-leaflet-markercluster": "^1.1.8",
-    "react-scripts": "^3.4.0",
-    "react-bootstrap": "1.0.1"
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.0"
   },
   "devDependencies": {},
   "scripts": {
