Frontend: Add Navigation Bar + User login/signup support
Signed-off-by: Nadav Goldin <ngoldin@virtual-gate.net>

--- a/frontend/zulu/package.json
+++ b/frontend/zulu/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
     "install": "^0.13.0",
     "leaflet": "^1.6.0",
     "leaflet.markercluster": "^1.4.1",
@@ -20,7 +21,9 @@
     "react-leaflet": "1.9.1",
     "react-leaflet-markercluster": "^1.1.8",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "react-validation": "^3.0.7",
+    "validator": "^13.1.1"
   },
   "devDependencies": {},
   "scripts": {
