--- a/frontend/zulu/package.json
+++ b/frontend/zulu/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "install": "^0.13.0",
     "leaflet": "^1.6.0",
@@ -18,6 +19,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-floating-action-button": "^1.0.5",
+    "react-icons": "^3.10.0",
     "react-leaflet": "1.9.1",
     "react-leaflet-markercluster": "^1.1.8",
     "react-router-dom": "^5.2.0",
